# syconf

./: Cargo.toml  README.md
.github/workflows/: build-release.yml  run-tests.yml
doc/: lang.md
scripts/: build-job.sy  github-release-workflow.sy
scripts/lib/: build-job.sy  config.sy  create-release-job.sy
syconf-bin/: Cargo.toml
syconf-bin/src/: main.rs
syconf-lib/: Cargo.toml
syconf-lib/src/: lib.rs  tests.rs
syconf-lib/src/compiler/: compile.rs  context.rs  error.rs  mod.rs  node.rs  source.rs  value.rs  value_extraction.rs
syconf-lib/src/compiler/functions/: mod.rs
syconf-lib/src/compiler/methods/: hashmap.rs  list.rs  mod.rs  string.rs
syconf-lib/src/compiler/operators/: comparison.rs  logical.rs  math.rs  mod.rs
syconf-lib/src/parser/: binary_operators.rs  block.rs  comparison.rs  conditional.rs  expr.rs  func.rs  input.rs  leaf.rs  logical.rs  math.rs  mod.rs  number.rs  spaces.rs  suffix_operators.rs  test_helpers.rs
syconf-lib/src/parser/value/: mod.rs  number.rs  string.rs
syconf-lib/src/resolver/: error.rs  mod.rs  node.rs  tree_builder.rs  value.rs  value_extraction.rs
syconf-lib/src/resolver/functions/: mod.rs
syconf-lib/src/resolver/methods/: hashmap.rs  list.rs  mod.rs  string.rs
syconf-lib/src/resolver/operators/: comparison.rs  logical.rs  math.rs
syconf-serde/: Cargo.toml
syconf-serde/src/: lib.rs  tests.rs
syconf-serde/src/de/: func.rs  mod.rs  tests.rs
syconf-serde/src/ser/: mod.rs  tests.rs
