[package]
name = "syconf-lib"
version = "0.3.1"
authors = ["Alexei Samokvalov <alexei@sam701.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.1"
nom_locate = "2.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_yaml = "0.8"
toml = "0.5"
tracing = "0.1"
anyhow = "1.0"
derivative = "2.1"
thiserror = "1.0"