[package]
name = "syconf-serde"
version = "0.2.0"
authors = ["Alexei Samokvalov <alexei@sam701.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syconf-lib = { path = "../syconf-lib" }
serde = "1.0"
thiserror = "1.0"